src/OpenCvSharp.Native/include/open_cv_sharp/ximgproc/ximgproc.h

typedef struct jyppx_ocv_ximgproc_graph_segmentation jyppx_ocv_ximgproc_graph_segmentation;
typedef struct jyppx_ocv_ximgproc_selective_search_strategy jyppx_ocv_ximgproc_selective_search_strategy;
typedef struct jyppx_ocv_ximgproc_selective_search_segmentation jyppx_ocv_ximgproc_selective_search_segmentation;
typedef struct jyppx_ocv_ximgproc_rect
{
    int x;
    int y;
    int width;
    int height;
} jyppx_ocv_ximgproc_rect;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_strategy_multiple_add(
    jyppx_ocv_ximgproc_selective_search_strategy* multiple,
    jyppx_ocv_ximgproc_selective_search_strategy* strategy,
    float weight);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_strategy_multiple_clear(
    jyppx_ocv_ximgproc_selective_search_strategy* multiple);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_create(
    jyppx_ocv_ximgproc_selective_search_segmentation** segmentation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_selective_search_segmentation_release_handle(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_set_base_image(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation,
    const jyppx_ocv_mat* image);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_switch_to_single_strategy(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation,
    int k,
    float sigma);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_switch_to_fast(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation,
    int base_k,
    int inc_k,
    float sigma);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_switch_to_quality(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation,
    int base_k,
    int inc_k,
    float sigma);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_add_image(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation,
    const jyppx_ocv_mat* image);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_clear_images(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_add_graph_segmentation(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation,
    jyppx_ocv_ximgproc_graph_segmentation* graph_segmentation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_clear_graph_segmentations(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_add_strategy(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation,
    jyppx_ocv_ximgproc_selective_search_strategy* strategy);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_clear_strategies(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_process_count(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation,
    int* rect_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_selective_search_segmentation_process_fill(
    jyppx_ocv_ximgproc_selective_search_segmentation* segmentation,
    jyppx_ocv_ximgproc_rect* rects,
    int rect_capacity,
    int* rect_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_covariance_estimation(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int window_rows,
    int window_cols);