src/OpenCvSharp/Internal/Interop/NativeMethods.XImgProc.Round67.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_strategy_multiple_add")]
        internal static extern int XImgProcSelectiveSearchStrategyMultipleAdd(IntPtr multiple, IntPtr strategy, float weight);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_strategy_multiple_clear")]
        internal static extern int XImgProcSelectiveSearchStrategyMultipleClear(IntPtr multiple);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_create")]
        internal static extern int XImgProcSelectiveSearchSegmentationCreate(out IntPtr segmentation);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_release_handle")]
        internal static extern void XImgProcSelectiveSearchSegmentationReleaseHandle(IntPtr segmentation);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_set_base_image")]
        internal static extern int XImgProcSelectiveSearchSegmentationSetBaseImage(IntPtr segmentation, IntPtr image);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_switch_to_single_strategy")]
        internal static extern int XImgProcSelectiveSearchSegmentationSwitchToSingleStrategy(IntPtr segmentation, int k, float sigma);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_switch_to_fast")]
        internal static extern int XImgProcSelectiveSearchSegmentationSwitchToFast(IntPtr segmentation, int baseK, int incK, float sigma);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_switch_to_quality")]
        internal static extern int XImgProcSelectiveSearchSegmentationSwitchToQuality(IntPtr segmentation, int baseK, int incK, float sigma);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_add_image")]
        internal static extern int XImgProcSelectiveSearchSegmentationAddImage(IntPtr segmentation, IntPtr image);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_clear_images")]
        internal static extern int XImgProcSelectiveSearchSegmentationClearImages(IntPtr segmentation);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_add_graph_segmentation")]
        internal static extern int XImgProcSelectiveSearchSegmentationAddGraphSegmentation(IntPtr segmentation, IntPtr graphSegmentation);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_clear_graph_segmentations")]
        internal static extern int XImgProcSelectiveSearchSegmentationClearGraphSegmentations(IntPtr segmentation);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_add_strategy")]
        internal static extern int XImgProcSelectiveSearchSegmentationAddStrategy(IntPtr segmentation, IntPtr strategy);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_clear_strategies")]
        internal static extern int XImgProcSelectiveSearchSegmentationClearStrategies(IntPtr segmentation);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_process_count")]
        internal static extern int XImgProcSelectiveSearchSegmentationProcessCount(IntPtr segmentation, out int rectCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_process_fill")]
        internal static extern int XImgProcSelectiveSearchSegmentationProcessFill(IntPtr segmentation, XImgProcRectNative[] rects, int rectCapacity, out int rectCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_covariance_estimation")]
        internal static extern int XImgProcCovarianceEstimation(IntPtr src, IntPtr dst, int windowRows, int windowCols);
    }
}
#endif
